--- a/src/containers/route/route.scss
+++ b/src/containers/route/route.scss
@@ -93,7 +93,7 @@
     li {
       font-family: "pacifico";
 
-      font-size: $md-font-size;
+      font-size: 1.5em;
       display: flex;
       justify-content: center;
     }
